--- a/Projects/Project 1.ipynb
+++ b/Projects/Project 1.ipynb
@@ -50,14 +50,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 278
         },
         "id": "24HJBBpNqCcb",
-        "outputId": "b7938bf5-1b04-40d3-8726-e3aba26192ac"
+        "outputId": "da08ba07-859c-48f7-aad3-967816a3df11"
       },
       "outputs": [
         {
@@ -87,7 +87,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-e7e2fb74-0776-4352-be02-ab7e827c7bbf\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-32067fe8-9994-4a79-a262-facd80d077de\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -226,7 +226,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-e7e2fb74-0776-4352-be02-ab7e827c7bbf')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-32067fe8-9994-4a79-a262-facd80d077de')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -278,12 +278,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-e7e2fb74-0776-4352-be02-ab7e827c7bbf button.colab-df-convert');\n",
+              "        document.querySelector('#df-32067fe8-9994-4a79-a262-facd80d077de button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-e7e2fb74-0776-4352-be02-ab7e827c7bbf');\n",
+              "        const element = document.querySelector('#df-32067fe8-9994-4a79-a262-facd80d077de');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -313,7 +313,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 1
+          "execution_count": 8
         }
       ],
       "source": [
@@ -422,18 +422,18 @@
           "height": 132
         },
         "id": "328baad0",
-        "outputId": "514e8762-2a21-4dc9-d64d-fc0f3a7cc676"
+        "outputId": "3fd6ff6f-6c1b-4333-9a19-0f2a1cc3185d"
       },
       "source": [
         "filtered_variants = variants[\n",
         "    (variants['GENE'] == 'PF3D7_0417200') &\n",
         "    (variants['EFFECT'] == 'missense_variant') &\n",
         "    (variants['AA_POS'] == 108)\n",
-        "]\n",
+        "] #This list has filters where we only look for the dhfs gene in the column \"gene\", the missense variant in the column \"effect\", and anything listing amino acid position of 108. All these three things combined net us this new table of data.\n",
         "\n",
         "filtered_variants"
       ],
-      "execution_count": 3,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -453,7 +453,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-c5e9e818-7f93-481a-aafc-1662166078f8\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-c217212e-2787-45a5-a119-d5b8d567196b\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -535,7 +535,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-c5e9e818-7f93-481a-aafc-1662166078f8')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-c217212e-2787-45a5-a119-d5b8d567196b')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -587,12 +587,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-c5e9e818-7f93-481a-aafc-1662166078f8 button.colab-df-convert');\n",
+              "        document.querySelector('#df-c217212e-2787-45a5-a119-d5b8d567196b button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-c5e9e818-7f93-481a-aafc-1662166078f8');\n",
+              "        const element = document.querySelector('#df-c217212e-2787-45a5-a119-d5b8d567196b');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -612,7 +612,7 @@
               "  </div>\n",
               "\n",
               "\n",
-              "  <div id=\"id_08ce0ee0-750e-4136-935d-f6e870f6962d\">\n",
+              "  <div id=\"id_96069d87-9113-49fa-bf20-c48d3382e958\">\n",
               "    <style>\n",
               "      .colab-df-generate {\n",
               "        background-color: #E8F0FE;\n",
@@ -656,7 +656,7 @@
               "    <script>\n",
               "      (() => {\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#id_08ce0ee0-750e-4136-935d-f6e870f6962d button.colab-df-generate');\n",
+              "        document.querySelector('#id_96069d87-9113-49fa-bf20-c48d3382e958 button.colab-df-generate');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
@@ -677,7 +677,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 9
         }
       ]
     },
@@ -724,7 +724,7 @@
         "plot_data['Sample'] = plot_data['Sample'].str.replace('.fq', '', regex=False)\n",
         "\n",
         "plt.figure(figsize=(10, 4))\n",
-        "# Scale AF for visibility (e.g., * 1000)\n",
+        "# Scale AF for visibility\n",
         "sizes = plot_data['AF'] * 1000\n",
         "\n",
         "plt.scatter(plot_data['POS'], plot_data['Sample'], s=sizes, alpha=0.6, c='blue', edgecolors='black')\n",
@@ -776,40 +776,6 @@
         "**Reasoning**:\n",
         "Install geopandas as it is required for map visualization and not always available by default.\n",
         "\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "12a6fcc7",
-        "outputId": "5e47842c-0b0a-4cc3-9d0b-23e82a7e278e"
-      },
-      "source": [
-        "!pip install geopandas"
-      ],
-      "execution_count": 5,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Requirement already satisfied: geopandas in /usr/local/lib/python3.12/dist-packages (1.1.2)\n",
-            "Requirement already satisfied: numpy>=1.24 in /usr/local/lib/python3.12/dist-packages (from geopandas) (2.0.2)\n",
-            "Requirement already satisfied: pyogrio>=0.7.2 in /usr/local/lib/python3.12/dist-packages (from geopandas) (0.12.1)\n",
-            "Requirement already satisfied: packaging in /usr/local/lib/python3.12/dist-packages (from geopandas) (26.0)\n",
-            "Requirement already satisfied: pandas>=2.0.0 in /usr/local/lib/python3.12/dist-packages (from geopandas) (2.2.2)\n",
-            "Requirement already satisfied: pyproj>=3.5.0 in /usr/local/lib/python3.12/dist-packages (from geopandas) (3.7.2)\n",
-            "Requirement already satisfied: shapely>=2.0.0 in /usr/local/lib/python3.12/dist-packages (from geopandas) (2.1.2)\n",
-            "Requirement already satisfied: python-dateutil>=2.8.2 in /usr/local/lib/python3.12/dist-packages (from pandas>=2.0.0->geopandas) (2.9.0.post0)\n",
-            "Requirement already satisfied: pytz>=2020.1 in /usr/local/lib/python3.12/dist-packages (from pandas>=2.0.0->geopandas) (2025.2)\n",
-            "Requirement already satisfied: tzdata>=2022.7 in /usr/local/lib/python3.12/dist-packages (from pandas>=2.0.0->geopandas) (2025.3)\n",
-            "Requirement already satisfied: certifi in /usr/local/lib/python3.12/dist-packages (from pyogrio>=0.7.2->geopandas) (2026.1.4)\n",
-            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.12/dist-packages (from python-dateutil>=2.8.2->pandas>=2.0.0->geopandas) (1.17.0)\n"
-          ]
-        }
       ]
     },
     {
